--- a/AirIQ.csproj
+++ b/AirIQ.csproj
@@ -33,10 +33,10 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\appicon.png" Color="#ffffff" BaseSize="128,128" Resize="True" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\appsplash.png" Color="White"/>
+		<MauiSplashScreen Include="Resources\Splash\appsplash.png" Color="White" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -75,5 +75,4 @@
 	  </EmbeddedResource>
 	</ItemGroup>
 
-	
 </Project>
