--- a/AirIQ.csproj
+++ b/AirIQ.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net9.0-android;net9.0-ios</TargetFrameworks>
+		<TargetFrameworks>net9.0-android35.0;net9.0-ios</TargetFrameworks>
 		
 		<OutputType>Exe</OutputType>
 		<RootNamespace>AirIQ</RootNamespace>
@@ -36,7 +36,7 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.png" Color="#ffffff" BaseSize="128,128" Resize="True" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\appsplash.png" Color="White" />
+		<MauiSplashScreen Include="Resources\Splash\appsplash.png" Color="White" BaseSize="256,256"/>
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
