--- a/AirIQ.csproj
+++ b/AirIQ.csproj
@@ -33,7 +33,8 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.png" Color="#ffffff" BaseSize="128,128" Resize="True" />
+		<MauiIcon Include="Resources\AppIcon\appicon_android.png" Color="#ffffff" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'"/>
+		<MauiIcon Include="Resources\AppIcon\appicon.png" Color="#ffffff" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'"/>
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\appsplash.png" Color="White" BaseSize="256,256" Condition="$(TargetFramework.Contains('-ios'))" />
