--- a/AirIQ.csproj
+++ b/AirIQ.csproj
@@ -33,8 +33,8 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon_android.png" Color="#ffffff" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'"/>
-		<MauiIcon Include="Resources\AppIcon\appicon.png" Color="#ffffff" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'"/>
+		<MauiIcon Include="Resources\AppIcon\appicon_android.png" Color="#ffffff" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'" />
+		<MauiIcon Include="Resources\AppIcon\appicon.png" Color="#ffffff" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\appsplash.png" Color="White" BaseSize="256,256" Condition="$(TargetFramework.Contains('-ios'))" />
@@ -56,14 +56,22 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="10.0.10" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
-		<PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="12.0.0" />
 		<PackageReference Include="Mopups" Version="1.3.4" />
 		<PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
 		<PackageReference Include="Refit.Newtonsoft.Json" Version="8.0.0" />
 		<PackageReference Include="Sentry.Maui" Version="5.16.2" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+		<PackageReference Include="Microsoft.Maui.Essentials" value="10.0.10">
+		  <Version>10.0.10</Version>
+		  <Version>10.0.10</Version>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Popups/SessionExpiryPopup.xaml.cs">
+	    <DependentUpon>SessionExpiryPopup.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Resources\Strings\AppResource.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
